test/cases/compile_errors/struct_with_declarations_unavailable_for_reify_type.zig
export fn entry() void {
    _ = @Type(@typeInfo(struct {
        pub const foo = 1;
    }));
}

// error
// backend=stage2
// target=native
//
// :2:9: error: reified structs must have no decls
